--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "dependencies": {
     "@mantine/core": "7.6.1",
     "@mantine/dates": "^7.6.1",
+    "@mantine/form": "^7.6.1",
     "@mantine/hooks": "7.6.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@prisma/client": "^5.5.2",
     "@tabler/icons-react": "^2.40.0",
     "next": "14.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
