--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
+      "@components/*": ["./components/*"],
+      "@lib/*": ["./lib/*"],
       "@/*": ["./*"]
     },
     "plugins": [{ "name": "next" }]
