redirect teaching class and session log after creation

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/dates": "^7.6.1",
     "@mantine/form": "^7.6.1",
     "@mantine/hooks": "7.6.1",
+    "@mantine/notifications": "^7.6.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@prisma/client": "^5.5.2",
     "@tabler/icons-react": "^2.40.0",
