--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@next/bundle-analyzer": "^14.0.1",
     "@prisma/client": "^5.5.2",
     "@tabler/icons-react": "^2.40.0",
+    "bcrypt": "^5.1.1",
     "next": "14.0.1",
+    "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.22.4"
@@ -44,6 +46,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
     "@types/node": "^20.8.10",
     "@types/react": "18.2.34",
