--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mantine-next-template",
+  "name": "before-thunder",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "next": "14.0.1",
     "next-auth": "^4.24.7",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.22.4"
@@ -48,6 +49,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20.8.10",
     "@types/react": "18.2.34",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
