--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ dist
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
+public/sw.js
+public/workbox-*.js
 
 # vuepress build output
 .vuepress/dist
