--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,5 @@
     "display": "standalone",
     "orientation": "portrait",
     "scope": "/",
-    "description": "Gotta Write Journal"
+    "description": "Keep track of your teaching journey"
   }
