--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "@mantine/notifications": "^7.6.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@prisma/client": "^5.5.2",
+    "@serwist/next": "^8.4.4",
+    "@serwist/precaching": "^8.4.4",
+    "@serwist/sw": "^8.4.4",
     "@tabler/icons-react": "^2.40.0",
+    "@types/web-push": "^3.6.3",
     "bcrypt": "^5.1.1",
     "next": "14.0.1",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "web-push": "^3.6.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
