--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,18 @@
 {
   "compilerOptions": {
-    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "types": [
+      "node", 
+      "jest", 
+      "@testing-library/jest-dom", 
+      "@serwist/next/typings" //serwist -> PWA
+    ],
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom", 
+      "dom.iterable", 
+      "esnext",
+      "WebWorker" // needed for PWA
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
