--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@tabler/icons-react": "^2.40.0",
     "@types/web-push": "^3.6.3",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.9.0",
+    "localforage": "^1.10.0",
     "next": "14.0.1",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
     "web-push": "^3.6.7",
     "zod": "^3.22.4"
   },
